--- a/matheus/css/cadastro.css
+++ b/matheus/css/cadastro.css
@@ -1,14 +1,17 @@
-*{
+* {
     box-sizing: border-box;
 }
-body{
+
+body {
     padding: 0;
     margin: 0;
 }
+
 html {
     font-family: 'Barlow', sans-serif;
     font-size: 18px;
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -16,51 +19,76 @@ header {
     margin-bottom: 20px;
     background-color: black;
 }
+
 header img {
     width: 50px;
 }
+
 nav ul {
     display: flex;
     margin: 0;
     padding: 0;
     list-style: none;
 }
-header img{
+
+header img {
     width: 70px;
     height: 70px;
     justify-content: left;
     margin: 10px;
-    
+
 }
+
 nav ul li a {
     display: inline-block;
-    padding: 10px;
+    padding: 30px;
     text-decoration: none;
-    color:white;
+    color: white;
     font-size: 0.8rem;
 }
-.serach{
-    width: 300px;
-    height: 30px;
+
+nav ul li a:hover {
+    background-color: rgba(223, 177, 26, 0.3);
 }
-.pesquisar{
+
+.serach {
+    width: 100px;
+    height: 30px;
+    background-color: #000000;
+    border-bottom: #666 1px solid;
+    color: white;
+    position: relative;
+    top: 20px;
+    right: 50px;
+}
+
+.serach:hover {
+    transition: 1000ms;
+    width: 500px;
+    height: 30px;
+    border: 1px dashed #efb810;
+}
+
+.pesquisar {
     background-color: white;
     font-size: 12pt;
     margin: 10px;
     padding: 5px;
     border-radius: 10px 10px 10px 10px;
     justify-content: center;
-    width: 120px;
-}
-.pesquisar:hover{
-    background-color:#efb810;
-    color: black;
+    width: 80px;
 }
 
-nav ul li a:hover {
-    background-color: rgba(223, 177, 26, 0.3);
+nav ul form button img {
+    width: 30px;
+    height: 30px;
 }
-div.acesso{
+
+.pesquisar:hover {
+    background-color: #efb810;
+    color: black;
+}
+/* div.acesso{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -73,14 +101,14 @@ div.acesso a{
 }
 div.acesso a:hover{
     background-color: rgb(165, 165, 162);
-}
+} */
 
 main.container{
     display: flex;
     justify-content:center;
     width: 950px;
-    height: 1000px;
-    background-color:#efb810;
+    height: 1070px;
+    background:url('../img/testecor.jpg');
     position: relative;
     left: 25%;
     right: 20%;
@@ -97,7 +125,7 @@ section form input{
     display: flex;
     justify-content: center;
     width: 600px;
-    height: 35px;
+    height: 25px;
 }
 section form select{
     display: flex;
@@ -137,10 +165,17 @@ section form button[type=reset]:hover{
     background-color: black;
     color: #efb810;
 }
+.pcd button[type="radio"]{
+    display: inline;
+    width: 5px;
+    height: 5px;
+    justify-content: start;
+    align-items: flex-start;
+}
 
 footer{
     width: 100%;
-    height: 300px;
+    height: 350px;
     display: grid;
     grid-template-areas:
         "contatos categorias assistencia ";
@@ -150,4 +185,10 @@ footer{
     background: #000000;
     margin-top: 60px;
     color: white;
+    padding: 20px;
+}
+
+footer div.map iframe {
+    width: 700px;
+    height: 200px;
 }
