--- a/matheus/css/login.css
+++ b/matheus/css/login.css
@@ -19,7 +19,6 @@ header {
 header img {
     width: 50px;
 }
-
 nav ul {
     display: flex;
     margin: 0;
@@ -35,19 +34,29 @@ header img{
 }
 nav ul li a {
     display: inline-block;
-    padding: 10px;
+    padding: 30px;
     text-decoration: none;
     color:white;
     font-size: 0.8rem;
 }
-
 nav ul li a:hover {
     background-color: rgba(223, 177, 26, 0.3);
 }
-
 .serach{
-    width: 300px;
+    width: 100px;
     height: 30px;
+    background-color: #000000;
+    border-bottom: #666 1px solid;
+    color: white;
+    position: relative;
+    top: 20px;
+    right: 50px;
+}
+.serach:hover{
+    transition: 1000ms;
+    width: 500px;
+    height: 30px;
+    border: 1px dashed #efb810;
 }
 .pesquisar{
     background-color: white;
@@ -56,13 +65,17 @@ nav ul li a:hover {
     padding: 5px;
     border-radius: 10px 10px 10px 10px;
     justify-content: center;
-    width: 120px;
+    width: 80px;
+}
+nav ul form button img{
+    width: 30px;
+    height: 30px;
 }
 .pesquisar:hover{
     background-color:#efb810;
     color: black;
 }
-div.acesso{
+/* div.acesso{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,7 +88,8 @@ div.acesso a{
 }
 div.acesso a:hover{
     background-color: rgb(165, 165, 162);
-}
+} */
+
 main.container{
    display: flex;
    justify-content: start;
@@ -87,10 +101,10 @@ main.container{
 
 section{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr; */
     justify-content: center;
     align-items: center;
-    background-color:#efb810;
+    background: url(../img/testecor.jpg);
     width: 800px;
     height: 500px;
     border-radius: 10px 10px 10px 10px;
@@ -127,7 +141,7 @@ section button[type=reset]:hover{
 }
 footer{
     width: 100%;
-    height: 300px;
+    height: 350px;
     display: grid;
     grid-template-areas:
         "contatos categorias assistencia ";
@@ -137,4 +151,9 @@ footer{
     background: #000000;
     margin-top: 60px;
     color: white;
+    padding: 20px;
+}
+footer div.map iframe{
+    width: 700px;
+    height: 200px;
 }
