--- a/matheus/css/perfil.css
+++ b/matheus/css/perfil.css
@@ -1,14 +1,17 @@
-*{
+* {
     box-sizing: border-box;
 }
-body{
+
+body {
     padding: 0;
     margin: 0;
 }
+
 html {
     font-family: 'Barlow', sans-serif;
     font-size: 18px;
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -16,27 +19,31 @@ header {
     margin-bottom: 20px;
     background-color: black;
 }
+
 header img {
     width: 50px;
 }
+
 nav ul {
     display: flex;
     margin: 0;
     padding: 0;
     list-style: none;
 }
-header img{
+
+header img {
     width: 70px;
     height: 70px;
     justify-content: left;
     margin: 10px;
-    
+
 }
+
 nav ul li a {
     display: inline-block;
-    padding: 10px;
+    padding: 30px;
     text-decoration: none;
-    color:white;
+    color: white;
     font-size: 0.8rem;
 }
 
@@ -44,25 +51,44 @@ nav ul li a:hover {
     background-color: rgba(223, 177, 26, 0.3);
 }
 
-.serach{
-    width: 300px;
+.serach {
+    width: 100px;
     height: 30px;
+    background-color: #000000;
+    border-bottom: #666 1px solid;
+    color: white;
+    position: relative;
+    top: 20px;
+    right: 50px;
 }
-.pesquisar{
+
+.serach:hover {
+    transition: 1000ms;
+    width: 500px;
+    height: 30px;
+    border: 1px dashed #efb810;
+}
+
+.pesquisar {
     background-color: white;
     font-size: 12pt;
     margin: 10px;
     padding: 5px;
     border-radius: 10px 10px 10px 10px;
     justify-content: center;
-    width: 120px;
-}
-.pesquisar:hover{
-    background-color:#efb810;
-    color: black;
+    width: 80px;
 }
 
-div.acesso{
+nav ul form button img {
+    width: 30px;
+    height: 30px;
+}
+
+.pesquisar:hover {
+    background-color: #efb810;
+    color: black;
+}
+/* div.acesso{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,10 +101,10 @@ div.acesso a{
 }
 div.acesso a:hover{
     background-color: rgb(165, 165, 162);
-}
+} */
 main.container{
     display: grid;
-    grid-template-columns: 3fr 7fr 2fr;
+    grid-template-columns: 4fr 8fr;
     margin: 0;
     padding: 0;
     height: 1200px;
@@ -121,7 +147,7 @@ main.container{
     height: 1200px;
     border-right:2px solid rgba(138, 138, 138, 0.2);
 }
-#dados h2{
+#dados h3{
     text-align: center;
 }
 #dados span{
@@ -208,10 +234,9 @@ article p{
     font-size: 13pt;
 }
 
-
-footer{
+footer {
     width: 100%;
-    height: 300px;
+    height: 350px;
     display: grid;
     grid-template-areas:
         "contatos categorias assistencia ";
@@ -221,4 +246,10 @@ footer{
     background: #000000;
     margin-top: 60px;
     color: white;
+    padding: 20px;
+}
+
+footer div.map iframe {
+    width: 700px;
+    height: 200px;
 }
