--- a/matheus/css/cadastro.css
+++ b/matheus/css/cadastro.css
@@ -96,7 +96,9 @@ main.container{
     justify-content:center;
     width: 650px;
     height: 970px;
-    background:url('../img/testecor.jpg');
+    /* background:url('../img/testecor.jpg'); */
+    /* background-image: linear-gradient(to left,#78740b,#c4c455,#d9d93a,#b0b01b,#d9d93a,#c4c455,#78740b); */
+    background-color: aliceblue;
     position: relative;
     left: 30%;
     border-radius: 30px 30px 30px 30px;
@@ -153,7 +155,25 @@ section form button[type=reset]:hover{
     background-color: black;
     color: #efb810;
 }
-
+/* Backgorund-animado */
+.box-degrade{
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(to left,#FFD700,#585858,#DAA520,#000000);
+    background-size: 500% 100%;
+    animation: degrade-animado 5s infinite alternate;
+}
+@keyframes degrade-animado {
+    0%{
+        background-position-x: 0%;
+    }
+    100%{
+        background-position-x:100% ;
+    }
+}
+/* Backgorund-animado */
 
 footer{
     width: 100%;
