--- a/matheus/css/home.css
+++ b/matheus/css/home.css
@@ -16,7 +16,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     background-color: black;
   
 }
@@ -100,6 +100,7 @@ nav ul form button img {
     height: 250px;
     background-color: black;
     overflow: hidden;
+    
 }
 
 .galery .carrosel {
@@ -107,10 +108,12 @@ nav ul form button img {
     animation-name: animacao;
     animation-duration: 20s;
     animation-iteration-count: infinite;
+   
 }
 
 .galery .carrosel img {
     width: 19.9%;
+    
 }
 @keyframes animacao {
     0% { margin-left: 0; }
@@ -128,10 +131,28 @@ nav ul form button img {
     bottom: 20px;
     width: 100vw;
     height: 270px;
+    
 }
 /* Estilo de banner */
-
-
+/* Backgorund-animado */
+.box-degrade{
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(to left,#FFD700,#585858,#DAA520,#000000);
+    background-size: 500% 100%;
+    animation: degrade-animado 5s infinite alternate;
+}
+@keyframes degrade-animado {
+    0%{
+        background-position-x: 0%;
+    }
+    100%{
+        background-position-x:100% ;
+    }
+}
+/* Backgorund-animado */
 
 
 footer{
@@ -144,7 +165,7 @@ footer{
     justify-content: space-evenly;
     align-items: center;
     background: #000000;
-    margin-top: 60px;
+    /* margin-top: 60px; */
     color: white;
     padding: 20px;
 }
