--- a/matheus/css/usuario.css
+++ b/matheus/css/usuario.css
@@ -99,7 +99,9 @@ main.container{
 .nav-usuario{
     display: block;
     height: 1200px;
-    background: url(../img/testecor.jpg);
+    /* background: url(../img/testecor.jpg); */
+    /* background-image: linear-gradient(to left,#78740b,#c4c455,#d9d93a,#b0b01b,#d9d93a,#c4c455,#78740b); */
+    /* background-color: aliceblue; */
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -183,6 +185,25 @@ section button[type=reset]:hover{
     background-color: black;
     color: #efb810;
 }
+/* Backgorund-animado */
+.box-degrade{
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(to left,#FFD700,#585858,#DAA520,#000000);
+    background-size: 500% 100%;
+    animation: degrade-animado 5s infinite alternate;
+}
+@keyframes degrade-animado {
+    0%{
+        background-position-x: 0%;
+    }
+    100%{
+        background-position-x:100% ;
+    }
+}
+/* Backgorund-animado */
 
 footer {
     width: 100%;
@@ -269,7 +290,7 @@ section.mobile-divdados{
     .nav-usuario-mobile{
         display: block;
         height: 1250px;
-        background: url(../img/testecor.jpg);
+        /* background: url(../img/testecor.jpg); */
         justify-content: center;
         align-items: center;
         text-align: center;
