--- a/matheus/css/home.css
+++ b/matheus/css/home.css
@@ -1,185 +1,230 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    padding: 0;
-    margin: 0;
-}
-
-html {
-    font-family: 'Barlow', sans-serif;
-    font-size: 18px;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* margin-bottom: 20px; */
-    background-color: black;
-  
-}
-
-header img {
-    width: 50px;
-}
-
-nav ul {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-header img {
-    width: 70px;
-    height: 70px;
-    justify-content: left;
-    margin: 10px;
-
-}
-
-nav ul li a {
-    display: inline-block;
-    padding: 30px;
-    text-decoration: none;
-    color: white;
-    font-size: 0.8rem;
-}
-
-nav ul li a:hover {
-    background-color: rgba(223, 177, 26, 0.3);
-}
-
-.serach {
-    width: 100px;
-    height: 30px;
-    background-color: #000000;
-    border-bottom: #666 1px solid;
-    color: white;
-    position: relative;
-    top: 20px;
-    right: 50px;
-}
-
-.serach:hover {
-    transition: 1000ms;
-    width: 300px;
-    height: 30px;
-    border: 1px dashed #efb810;
-}
-
-.pesquisar {
-    background-color: white;
-    font-size: 12pt;
-    margin: 10px;
-    padding: 5px;
-    border-radius: 10px 10px 10px 10px;
-    justify-content: center;
-    width: 80px;
-}
-
-nav ul form button img {
-    width: 30px;
-    height: 30px;
-}
-
-.pesquisar:hover {
-    background-color: #efb810;
-    color: black;
-}
-/* Fazer grid e dimensaionamento */
-/* main.conatiner{
-    width: 100vw;
-    height: 100vh;
-} */
-/* Estilo de banner */
-.galery {
-    width: 100vw;
-    height: 250px;
-    background-color: black;
-    overflow: hidden;
-    
-}
-
-.galery .carrosel {
-    width: 500%;
-    animation-name: animacao;
-    animation-duration: 20s;
-    animation-iteration-count: infinite;
-   
-}
-
-.galery .carrosel img {
-    width: 19.9%;
-    
-}
-@keyframes animacao {
-    0% { margin-left: 0; }
-    20% { margin-left: 0; }
-    25% { margin-left: -100%; }
-    45% { margin-left: -100%; }
-    50% { margin-left: -200%; }
-    70% { margin-left: -200%; }
-    75% { margin-left: -300%; }
-    95% { margin-left: -300%; }
-    100% { margin-left: -400%; }
-}
-#img{
-    position: relative;
-    bottom: 20px;
-    width: 100vw;
-    height: 270px;
-    
-}
-/* Estilo de banner */
-/* Backgorund-animado */
-.box-degrade{
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    background-image: linear-gradient(to left,#FFD700,#585858,#DAA520,#000000);
-    background-size: 500% 100%;
-    animation: degrade-animado 5s infinite alternate;
-}
-@keyframes degrade-animado {
-    0%{
-        background-position-x: 0%;
-    }
-    100%{
-        background-position-x:100% ;
-    }
-}
-/* Backgorund-animado */
-
-
-footer{
-    width: 100%;
-    height: 350px;
-    display: grid;
-    grid-template-areas:
-        "contatos categorias assistencia ";
-    grid-auto-rows: 300px;
-    justify-content: space-evenly;
-    align-items: center;
-    background: #000000;
-    /* margin-top: 60px; */
-    color: white;
-    padding: 20px;
-}
-
-footer div.map iframe {
-    width: 700px;
-    height: 200px;
-}
-
-.mobile-menu,.mobile-menu-icon
-,.mobile-map,.mobile-imagperfil,.mobile-sobre{
-    display: none;
-}
-
+ @media (max-width:1280px) {
+        * {
+            box-sizing: border-box;
+        }
+        
+        body {
+            padding: 0;
+            margin: 0;
+        }
+        
+        html {
+            font-family: 'Barlow', sans-serif;
+            font-size: 18px;
+        }
+        
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            /* margin-bottom: 20px; */
+            background-color: black;
+          
+        }
+        
+        header img {
+            width: 50px;
+        }
+        
+        nav ul {
+            display: flex;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+        
+        header img {
+            width: 70px;
+            height: 70px;
+            justify-content: left;
+            margin: 10px;
+        
+        }
+        
+        nav ul li a {
+            display: inline-block;
+            padding: 30px;
+            text-decoration: none;
+            color: white;
+            font-size: 0.8rem;
+        }
+        
+        nav ul li a:hover {
+            background-color: rgba(223, 177, 26, 0.3);
+        }
+        
+        .serach {
+            width: 100px;
+            height: 30px;
+            background-color: #000000;
+            border-bottom: #666 1px solid;
+            color: white;
+            position: relative;
+            top: 20px;
+            right: 50px;
+        }
+        
+        .serach:hover {
+            transition: 1000ms;
+            width: 300px;
+            height: 30px;
+            border: 1px dashed #efb810;
+        }
+        
+        .pesquisar {
+            background-color: white;
+            font-size: 12pt;
+            margin: 10px;
+            padding: 5px;
+            border-radius: 10px 10px 10px 10px;
+            justify-content: center;
+            width: 80px;
+        }
+        
+        nav ul form button img {
+            width: 30px;
+            height: 30px;
+        }
+        
+        .pesquisar:hover {
+            background-color: #efb810;
+            color: black;
+        }
+        /* Fazer grid e dimensaionamento */
+        /* main.conatiner{
+            width: 100vw;
+            height: 100vh;
+        } */
+        /* Estilo de banner */
+        .galery {
+            width: 100vw;
+            height: 250px;
+            background-color: black;
+            overflow: hidden;
+            
+        }
+        
+        .galery .carrosel {
+            width: 500%;
+            animation-name: animacao;
+            animation-duration: 20s;
+            animation-iteration-count: infinite;
+           
+        }
+        
+        .galery .carrosel img {
+            width: 19.9%;
+            
+        }
+        @keyframes animacao {
+            0% { margin-left: 0; }
+            20% { margin-left: 0; }
+            25% { margin-left: -100%; }
+            45% { margin-left: -100%; }
+            50% { margin-left: -200%; }
+            70% { margin-left: -200%; }
+            75% { margin-left: -300%; }
+            95% { margin-left: -300%; }
+            100% { margin-left: -400%; }
+        }
+        #img{
+            position: relative;
+            bottom: 20px;
+            width: 100vw;
+            height: 270px;
+            
+        }
+        /* Estilo de banner */
+        /* Backgorund-animado */
+        .box-degrade{
+            width: 100vw;
+            height: 300vh;
+            align-items: center;
+            justify-content: center;
+            background-image: linear-gradient(to left,#FFD700,#585858,#DAA520,#000000);
+            background-size: 500% 100%;
+            animation: degrade-animado 5s infinite alternate;
+        }
+        @keyframes degrade-animado {
+            0%{
+                background-position-x: 0%;
+            }
+            100%{
+                background-position-x:100% ;
+            }
+        }
+        /* Backgorund-animado */
+        /*Cards*/
+        /*Bloco de cards*/
+        .card{
+            display: flex;
+            height: 700px;
+        }
+        .anuncio{
+            display: flex;
+            float: left;
+            width: 300px;
+            height: 450px;
+            position: relative;
+            top: 300px;
+            left: 200px;
+            margin:0px 75px 0px 0px;
+            padding: 0;
+            border-radius: 30px 30px 30px 30px;
+            background-color: antiquewhite;
+            text-align: center;
+            font-size: 10pt;
+            padding: 20px;
+        }
+        .foto-card{
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            position: relative;
+            left: 50px;
+        }
+        section button[type="button"]{
+            display: block;
+            width: 100%;
+            height: 30px;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            top: 370px;
+            background-color: #efb810;
+            color:black;
+            border-radius: 12px 12px 12px 12px;
+        }
+        section button[type=button]:hover{
+            background-color: black;
+            color: #efb810;
+        }
+        footer{
+            width: 100%;
+            height: 350px;
+            display: grid;
+            grid-template-areas:
+                "contatos categorias assistencia ";
+            grid-auto-rows: 300px;
+            justify-content: space-evenly;
+            align-items: center;
+            background: #000000;
+            margin-top: 60px;
+            color: white;
+            padding: 20px;
+            /* margin-top: 500px; */
+        }
+        
+        footer div.map iframe {
+            width: 700px;
+            height: 200px;
+        }
+        
+        .mobile-menu,.mobile-menu-icon
+        ,.mobile-map,.mobile-imagperfil,.mobile-sobre{
+            display: none;
+        }
+        }
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 html, body { font-family: 'Roboto Condensed', sans-serif; font-size: 100%; width: 100%; height: 100%; }
@@ -241,6 +286,7 @@ a:hover { opacity: 0.6; }
     .mobile-menu .login-button button{
         width: 100%;
     }
+
     /*Rodape do mobile*/
     .footer-mobile{
         display: block;
